--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 server.port=8080
+
+spring.security.user.name=user
+spring.security.user.password=123
